# rp2040-bare_metal

./: .gitmodules  README.md
MorseC/: .gitignore  .gitmodules  Makefile  rp2040.ld  runner.ps1
MorseC/boot/: bootStage2.c  crc32.cpp
MorseC/src/: main.c  startup.c
MorseR/: .gitignore  .gitmodules  Cargo.toml  build.rs  memory.x  runner.ps1  transmitter.uf2
MorseR/.cargo/: config.toml
MorseR/src/: boot_stage2.rs  lib.rs  startup.rs  transmit.rs
